--- a/src/refund.html
+++ b/src/refund.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Products - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="assets/css/gift-product-small-double.css">
 </head>
 
-<body style="background:linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('assets/img/bg.jpg');">
-    <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3">A new way to buy tickets</span><span class="site-heading-lower">shiba TICKETS</span></h1>
+<body style="background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('assets/img/bg.jpg');height: 957px;">
+    <h1 class="text-center text-white d-none d-lg-block site-heading" style="color: rgb(255,253,253);"><span class="text-primary site-heading-upper mb-3">A NEW WAY TO BUY TICKETS&nbsp;</span><span class="site-heading-lower">SHIBA TICKETS</span></h1>
     <nav class="navbar navbar-light navbar-expand-lg bg-dark py-lg-4" id="mainNav">
         <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">TICKETS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div
@@ -28,27 +28,18 @@
         </div>
         </div>
     </nav>
-    <section class="page-section clearfix">
+    <section class="page-section">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" src="assets/img/main.jpg">
-                <div class="intro-text left-0 text-centerfaded p-5 rounded bg-faded text-center">
-                    <h2 class="section-heading mb-4"><span class="section-heading-upper">Fresh Coffee</span><span class="section-heading-lower">Worth Drinking</span></h2>
-                    <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!</p>
-                    <div class="mx-auto intro-button"><a class="btn btn-primary d-inline-block mx-auto btn-xl" role="button" href="#">Visit Us Today!</a></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="page-section cta">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-9 mx-auto">
-                    <div class="cta-inner text-center rounded">
-                        <h2 class="section-heading mb-4"><span class="section-heading-upper">Our Promise</span><span class="section-heading-lower">To You</span></h2>
-                        <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied,
-                            please let us know and we will do whatever we can to make things right!</p>
+            <div class="product-item">
+                <div class="d-flex product-item-title"></div>
+                <form class="align-items-center">
+                    <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
+                        <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
+                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Rimborsa il biglietto</h4><label style="color: rgb(246,247,248);">ID</label>
+                            <div class="form-group"><input class="form-control" type="text"></div><button class="btn btn-primary btn-block" type="button">RIMBORSA</button></div>
+                        <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center"><img src="assets/img/pngaaa.com-429027.png" style="width: 328px;margin: 57px;"><label>Label</label></div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </section>
