Modified html pages, integration with flask api.

--- a/src/refund.html
+++ b/src/refund.html
@@ -32,11 +32,11 @@
         <div class="container">
             <div class="product-item">
                 <div class="d-flex product-item-title"></div>
-                <form class="align-items-center">
+                <form class="align-items-center" action="/refund" method="get">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
                             <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Rimborsa il biglietto</h4><label style="color: rgb(246,247,248);">ID</label>
-                            <div class="form-group"><input class="form-control" type="text"></div><button class="btn btn-primary btn-block" type="button">RIMBORSA</button></div>
+                            <div class="form-group"><input class="form-control" type="text" name="ticket_id"></div><button class="btn btn-primary btn-block" type="button">RIMBORSA</button></div>
                         <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center"><img src="assets/img/pngaaa.com-429027.png" style="width: 328px;margin: 57px;"><label>Label</label></div>
                     </div>
                 </form>
