--- a/src/buyProduct.html
+++ b/src/buyProduct.html
@@ -32,13 +32,13 @@
         <div class="container">
             <div class="product-item">
                 <div class="d-flex product-item-title"></div>
-                <form class="align-items-center">
+                <form class="align-items-center" action="/buy_ticket" method="get">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
                             <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">PRENOTA IL TUO BIGLIETTO</h4>
                             <div class="form-group">
                             	<label style="color: rgb(246,247,248);">Data del biglietto</label>
-                            	<select class="form-control pb-2" id="daySelect" required=""> </select>
+                            	<select class="form-control pb-2" id="daySelect" name="date" required=""> </select>
                             </div>
                             <label
                                 style="color: rgb(246,247,248);">
@@ -46,14 +46,14 @@
                             </label>
 
                             <div class="form-group">
-                               <select class="form-control pb-2" id="startSelect"  required=""></select>
+                               <select class="form-control pb-2" id="startSelect" name="start_station"  required=""></select>
                             </div>
 
                             <label
                                 style="color: rgb(246,247,248);">Stazione di arrivo
                             </label>
                             <div class="form-group">
-                            	<select class="form-control pb-2" required="" id = "endSelect"></select></div>
+                            	<select class="form-control pb-2" required="" name="end_station" id = "endSelect"></select></div>
                                     <button
                                         class="btn btn-primary btn-block" type="button" id = "buyButton" disabled>PRENOTA</button>
                                         <div class="form-row justify-content-center align-items-center align-content-center" style="margin: 26px;">
@@ -62,6 +62,7 @@
                         </div>
                         <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center"><img src="assets/img/kisspng-event-tickets-raffle-transparency-airline-ticket-d-openingstijden-olaertsduyn-5d3d7baa328750.865723761564310442207.png" style="width: 328px;margin: 57px;"><label>Label</label></div>
                     </div>
+                    <input type="hidden" name="num_station" id="hiddenNumStation">
                 </form>
             </div>
         </div>
